Stop the line numbers column from jumping size

--- a/css/home.css
+++ b/css/home.css
@@ -63,6 +63,7 @@ button.copyCode {
 
 .highlight .lineno {
   padding-right: 2pt !important;
+  min-width: 13pt;
 }
 
 .highlight .code {
